Fixing UI on get inspired adding links to idea and removing extra spaces between name and last name Finishiing up the topic page.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2297,3 +2297,6 @@ form.dropzone{
     display: inline-block;
     vertical-align: middle;
 }
+.circle-tile-number a{
+    color: inherit;
+}
